src/app/chat-window/chat-window.component.css
.insur_chat{
  margin-top: 5px;
  margin-right: 700px;
}
.card{
  height: 500px;
  width: 450px;
  border-radius: 20px !important;
  background-color: rgba(128, 158, 185, 0.4) !important;
}
.navbar{
  background-color: rgba(247, 243, 243, 0.3);
  width: 100%;
}
.nav-img{
  height: 50px;
  width: 50px;  
}
.bg-img{
  height:36em;
  width: 100%;
  background-size: cover;
  background-image:url('https://secureservercdn.net/72.167.25.126/mg3.92c.myftpupload.com/wp-content/uploads/2016/06/hans-banner.jpg');
}
.contacts_body{
  padding:  0.75rem 0 !important;
  overflow-y: auto;
  white-space: nowrap;
}
.msg_card_body{
  overflow-y: auto;
}
.card-header{
  border-radius: 15px 15px 0 0 !important;
  border-bottom: 0 !important;
  background-color: rgba(206, 166, 166, 0.3);
}
.card-footer{
border-radius: 0 0 15px 15px !important;
  border-top: 0 !important;
}
.container{
  align-content: center;
}
.search{
  border-radius: 15px 0 0 15px !important;
  background-color: rgba(0,0,0,0.3) !important;
  border:0 !important;
  color:white !important;
}
.search:focus{
     box-shadow: darkorchid !important;
       outline:0px !important;
}
.type_msg{
  background-color: rgba(206, 166, 166, 0.3) !important;
  border:0 !important;
  color:rgb(250, 249, 252) !important;
  height: 60px !important;
  overflow-y: auto;
}
  .type_msg:focus{
     box-shadow: darksalmon !important;
       outline:0px !important;
}
.btn{
  background-color: rgba(206, 166, 166, 0.3);
  left: 100px;
}
.senti_btn{
  margin-left: 120px ;    
  box-shadow: #4cd137;
  border-color: #4cd137;
}
.speech{
  background-color: rgba(206, 166, 166, 0.3);
  border: 0;
  position: relative;
  padding-left: 10px;
  padding-right: 10px;
  margin-left: 20px;
  height: 38px;
  color: white;
  box-shadow: #4cd137;
  border-color: #4cd137;
  border-radius: 5px 5px 5px 5px
}
.attach_btn{
border-radius: 15px 0 0 15px !important;
background-color: rgba(163, 110, 124, 0.3) !important;
  border:0 !important;
  color: white !important;
  cursor: pointer;
}
.send_btn{
border-radius: 0 15px 15px 0 !important;
background-color: rgba(0,0,0,0.3) !important;
  border:0 !important;
  color: white !important;
  cursor: pointer;
}
.search_btn{
  border-radius: 0 15px 15px 0 !important;
  background-color: rgba(0,0,0,0.3) !important;
  border:0 !important;
  color: white !important;
  cursor: pointer;
}
.contacts{
  list-style: none;
  padding: 0;
}
.contacts li{
  width: 100% !important;
  padding: 5px 10px;
  margin-bottom: 15px !important;
}
.active{
  background-color: rgba(0,0,0,0.3);
}
.user_img{
  height: 70px;
  width: 70px;
  border:1.5px solid #f5f6fa;

}
.user_img_msg{
  height: 40px;
  width: 40px;
  border:1.5px solid #f5f6fa;

}
.img_cont{
  position: relative;
  height: 70px;
  width: 70px;
}
.img_cont_msg{
  position: relative;
  height: 40px;
  width: 40px;
  margin-right: 0px;
}
.img_cont_msg_u{
  position: relative;
  margin-left:0px;
  height: 40px;
  width: 40px;
}
.user_msg{
  float: right;
}
.online_icon{
position: absolute;
height: 15px;
width:15px;
background-color: #4cd137;
border-radius: 50%;
bottom: 0.2em;
right: 0.4em;
border:1.5px solid white;
}
.offline{
background-color: #c23616 !important;
}
.user_info{
margin-top: auto;
margin-bottom: auto;
margin-left: 15px;
}
.user_info span{
font-size: 20px;
color: white;
}
.user_info p{
font-size: 10px;
color: rgba(255,255,255,0.6);
}
.video_cam{
margin-left: 50px;
margin-top: 5px;
}
.video_cam span{
color: white;
font-size: 20px;
cursor: pointer;
margin-right: 20px;
}
.msg_cotainer{  
  display:block;
  padding:5px 6px 8px 6px;
  border-radius: 6px;
  float: right;
  margin-right: 20px;
  color:white;
  background-color: #18191a;
  position: relative
}
.msg_cotainer:after {
  content: "";
  position:absolute;
  margin-top:-6px;
  margin-left:-5px;
  border-left: 12px solid transparent;
  border-right: 12px solid transparent;
  border-bottom: 12px solid #18191a;
  transform:rotate(-45deg);
  right: -15px; 
  top: 10px;
}
.msg_cotainer_send{
  display:block;
  padding:5px 6px 8px 6px;
  border-radius: 6px;
  float: left;
  margin-left: 20px;
  color:black;
  background-color: #f0f1eb;
  position: relative;
}

.msg_cotainer_send:after {
  content: "";
  position:absolute;
  margin-top:-6px;
  margin-right:-5px;
  border-left: 12px solid transparent;
  border-right: 12px solid transparent;
  border-bottom: 12px solid #f0f1eb;
  transform:rotate(45deg);
  left: -15px; 
  top: 10px;
}
.msg_time{
position: relative;
left: 0;
bottom: -15px;
color: rgba(255,255,255,0.5);
font-size: 10px;
float: right;
}
.msg_time_send{
position: relative;
right:0;
bottom: -15px;
color: rgba(15, 15, 15, 0.5);
font-size: 10px;
float: right;
}
.msg_head{
position: relative;
}
#action_menu_btn{
position: absolute;
right: 10px;
top: 10px;
color: white;
cursor: pointer;
font-size: 20px;
}
.action_menu{
z-index: 1;
position: absolute;
padding: 15px 0;
background-color: rgba(0,0,0,0.5);
color: white;
border-radius: 15px;
top: 30px;
right: 15px;
display: none;
}
.action_menu ul{
list-style: none;
padding: 0;
margin: 0;
}
.action_menu ul li{
width: 100%;
padding: 10px 15px;
margin-bottom: 5px;
}
.action_menu ul li i{
padding-right: 10px;

}
.action_menu ul li:hover{
cursor: pointer;

}
@media(max-width: 576px){
.contacts_card{
margin-bottom: 15px !important;
}
}

